# models/problem_basic.go
@@ -7,12 +7,13 @@ import (
 
 type ProblemBasic struct {
 	gorm.Model
-	Identity          string             `gorm:"column:identity;type:varchar(36);" json:"identity"`
+	Identity          string             `gorm:"column:identity;type:varchar(100);" json:"identity"`
 	Title             string             `gorm:"column:title;type:varchar(255);" json:"title"`
 	Content           string             `gorm:"column:content;type:text;" json:"content"`
 	MaxRuntime        int                `gorm:"column:max_runtime;type:int(11)" json:"max_runtime"` //最大运行时间
 	MaxMem            int                `gorm:"column:max_mem;type:int(11)" json:"max_mem"`         //最大运行内存
-	ProblemCategories []*ProblemCategory `gorm:"foreignKey:problem_id;references:id"`
+	ProblemCategories []*ProblemCategory `gorm:"foreignKey:problem_id;references:id"`                //关联分类表
+	TestCases         []*TestCase        `gorm:"foreignKey:problem_identity;references:identity"`    //关联测试用例表
 }
 
 func (ProblemBasic) TableName() string {
